ns-client/client1/0a-ingressEcho.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-client1
  namespace: client1
  annotations:
    kubernetes.io/ingress.class: kong-client1
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong-client1
  rules:
  - http:
      paths:
      - path: '/client1/echo'
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 1027
