ns-client/client1/0c-ingressHttpbin-ApiKey.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-apikey-client1
  namespace: client1
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong-client1
  rules:
  - http:
      paths:
      - path: /client1/ApiKeyHttpbin
        pathType: Prefix
        backend:
          service:
             name: httpbin
             port:
               number: 8080
